--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "react-native": "0.67.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
+    "@types/jest": "^27.4.1",
+    "babel-jest": "^27.5.1",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
